Fix native access warning in native build